--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/react": "^5.11.1",
+    "@geisweiller/react-native-week-view": "^1.0.1",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
@@ -28,11 +31,14 @@
     "expo-updates": "~0.11.6",
     "express": "^4.17.3",
     "formik": "^2.2.9",
+    "intl": "^1.2.5",
     "mongoose": "^6.3.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-is": "^18.1.0",
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1283.0",
+    "react-native-events-week-calendar": "^1.0.24",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
