--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@date-io/dayjs": "^2.14.0",
+    "@date-io/luxon": "^2.14.0",
     "@fullcalendar/daygrid": "^5.11.0",
     "@fullcalendar/react": "^5.11.1",
     "@geisweiller/react-native-week-view": "^1.0.1",
+    "@material-ui/core": "^4.12.4",
     "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-community/datetimepicker": "^4.0.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@types/react-native-calendars": "^1.1264.3",
+    "@wojtekmaj/react-datetimerange-picker": "^3.5.0",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "expo": "^44.0.0",
     "expo-app-loading": "~1.3.0",
     "expo-asset": "~8.4.6",
+    "expo-checkbox": "^2.1.0",
     "expo-constants": "~13.0.1",
+    "expo-contacts": "^10.2.0",
     "expo-google-app-auth": "~8.3.0",
     "expo-google-sign-in": "~10.1.0",
     "expo-status-bar": "~1.2.0",
@@ -34,12 +41,18 @@
     "intl": "^1.2.5",
     "mongoose": "^6.3.1",
     "react": "17.0.1",
+    "react-date-range": "^1.4.0",
     "react-dom": "17.0.1",
     "react-is": "^18.1.0",
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1283.0",
+    "react-native-date-picker": "^4.2.2",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-dialog": "^9.2.2",
     "react-native-events-week-calendar": "^1.0.24",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.12.1",
+    "react-native-paper-dates": "^0.8.7",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-swiper": "^1.6.0",
